z-index fix

--- a/src/blocks/modules/catalog-menu/catalog-menu.scss
+++ b/src/blocks/modules/catalog-menu/catalog-menu.scss
@@ -4,7 +4,7 @@
     top: 125px;
     left: 0;
     background: #fff;
-    z-index: 11;
+    z-index: 14;
     padding: 39px 30px 62px 0px;
     box-sizing: border-box;
     box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0.05), 29px 0px 63px 0px rgba(0, 0, 0, 0.05), 115px 0px 115px 0px rgba(0, 0, 0, 0.04), 258px 0px 155px 0px rgba(0, 0, 0, 0.03), 458px 0px 183px 0px rgba(0, 0, 0, 0.01), 716px 0px 200px 0px rgba(0, 0, 0, 0.00);
